--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     html, body {
       height: 100%;
+      widht: 100%
       margin: 0;
       padding: 0;
       font-family: Poppins, system-ui, Segoe UI, Roboto, Arial;
@@ -36,7 +37,6 @@
 
     .card {
       width: 100%;
-      max-width: 820px;
       background: rgba(255, 255, 255, 0.95);
       backdrop-filter: blur(6px);
       border-radius: 18px;
