--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
       .card { padding: 20px; }
       .para { font-size: 16px; }
     }
+    .cta {
+      position: relative;
+      z-index: 1;
+    }
+    .tip {
+      position: relative;
+     z-index: 2;
+     margin-top: 20px;
+    }
   </style>
 </head>
 
